--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,16 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.8.0'
+    implementation 'androidx.navigation:navigation-compose:2.8.0'
 
-    def room_version = "2.5.0"
+    def room_version = "2.6.1"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    // Other dependencies
+    // Kotlin coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+
 }
